# kando

./: .gitignore  Cargo.toml
data/: default.json
src/: api.rs  main.rs  static_pages.rs
src/api/: board.rs  mod.rs
src/api/data_store/: file.rs  mod.rs
static/: board.css  board.html  board.js  index.html  index.js  styles.css
