[package]
name = "kando"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
actix-web = "4.3.1"
actix-files = "0.6.2"
env_logger = "0.10.0"
serde = {version = "1.0.171", features = ["serde_derive"]}
serde_json = "1.0.103"
uuid = {version = "1.4.1", features = ["v4", "serde"]}
async-trait = "0.1.71"